fix: hide toolitp on mobile

--- a/src/client/ts/components/Tools/tools.scss
+++ b/src/client/ts/components/Tools/tools.scss
@@ -90,6 +90,11 @@ html[data-theme="dark"] .tools {
       top: 50%;
       bottom: auto;
       transform: translateY(-50%);
+      display: none;
+
+      @include lg {
+        display: block;
+      }
     }
 
     &[data-tooltip]::before {
